# videoToAscii

./: CMakeLists.txt
incl/: frame.h
src/: frame.cpp  main.cpp
